// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputInfo /> should be shown with the withValidation hoc if not changed 1`] = `
<Validator
  info="Required input"
>
  <TextField
    info="Required input"
    onChange={[Function]}
  >
    <TextFieldInt
      info="Required input"
      onChange={[Function]}
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-kgoBCf",
                "isStatic": true,
                "lastClassName": "eXDsoh",
                "rules": Array [
                  "
  position: relative;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-kgoBCf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-kgoBCf eXDsoh"
          >
            <Styled(StackPanel)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kGXeez",
                      "isStatic": true,
                      "lastClassName": "kYntIi",
                      "rules": Array [
                        "
  display: flex;
",
                      ],
                    },
                    "displayName": "Styled(StackPanel)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kGXeez",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <StackPanel
                  className="sc-kGXeez kYntIi"
                >
                  <styled.div
                    className="sc-kGXeez kYntIi"
                    dir="row"
                    wrapping="nowrap"
                  >
                    <StyledComponent
                      className="sc-kGXeez kYntIi"
                      dir="row"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "fyOvof",
                            "rules": Array [
                              "
  display: flex;
  flex-direction: ",
                              [Function],
                              ";
  flex-wrap: ",
                              [Function],
                              ";
  justify-content: flex-start;
",
                            ],
                          },
                          "displayName": "styled.div",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      wrapping="nowrap"
                    >
                      <div
                        className="sc-kGXeez kYntIi sc-bwzfXH fyOvof"
                        dir="row"
                      >
                        <styled.div
                          border={1}
                          focused={false}
                          hasValue={false}
                        >
                          <StyledComponent
                            border={1}
                            focused={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-jzJRlG",
                                  "isStatic": false,
                                  "lastClassName": "gHloTz",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-jzJRlG",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            hasValue={false}
                          >
                            <div
                              className="sc-jzJRlG gHloTz"
                            >
                              <Component
                                error={false}
                                focused={false}
                                hasValue={false}
                                multiline={false}
                              >
                                <styled.div>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-gqjmRU",
                                          "isStatic": true,
                                          "lastClassName": "lohXgE",
                                          "rules": Array [
                                            "
  flex-grow: 1;
  display: flex;
  flex-flow: column-reverse;
  height: 100%;
  position: relative;
  min-width: 0;
  margin: auto;
",
                                          ],
                                        },
                                        "displayName": "styled.div",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "sc-gqjmRU",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gqjmRU lohXgE"
                                    >
                                      <styled.input
                                        labelShown={false}
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        value=""
                                      >
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "sc-fjdhpX",
                                                "isStatic": false,
                                                "lastClassName": "ghzElm",
                                                "rules": Array [
                                                  "
  color: ",
                                                  [Function],
                                                  ";
  background: none;
  border: none;
  border-radius: 0;
  font-size: ",
                                                  "1rem",
                                                  ";
  font-family: inherit;
  padding: ",
                                                  [Function],
                                                  ";
  box-sizing: border-box;
  box-shadow: none;
  margin: 0;
  width: 100%;
  height: 100%;
  cursor: ",
                                                  [Function],
                                                  ";
  -webkit-appearance: none;
  transition: all 0.2s;

  &::placeholder {
    color: ",
                                                  [Function],
                                                  ";
    opacity: ",
                                                  [Function],
                                                  ";
    transition: inherit;
  }

  &:focus {
    outline: none;

    &::placeholder {
      opacity: 1;
    }
  }
",
                                                ],
                                              },
                                              "displayName": "styled.input",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "sc-fjdhpX",
                                              "target": "input",
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={[Function]}
                                          labelShown={false}
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          value=""
                                        >
                                          <input
                                            className="sc-fjdhpX ghzElm"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            value=""
                                          />
                                        </StyledComponent>
                                      </styled.input>
                                    </div>
                                  </StyledComponent>
                                </styled.div>
                              </Component>
                              <Component
                                hasValue={false}
                                onClear={[Function]}
                              />
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </div>
                    </StyledComponent>
                  </styled.div>
                </StackPanel>
              </StyledComponent>
            </Styled(StackPanel)>
            <InputInfo>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": false,
                        "lastClassName": "dvVoLK",
                        "rules": Array [
                          "
  ",
                          "
    ",
                          "font-size: 0.75rem;
  ",
                          "
    ",
                          "line-height: 0.875rem;
  ",
                          "
    ",
                          "
  ",
                          "
  color: ",
                          [Function],
                          ";
  padding: ",
                          "0.25rem",
                          " 0;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="sc-bdVaJa dvVoLK"
                  >
                    Required input
                  </div>
                </StyledComponent>
              </styled.div>
            </InputInfo>
          </div>
        </StyledComponent>
      </styled.div>
    </TextFieldInt>
  </TextField>
</Validator>
`;

exports[`<InputInfo /> should not be shown with the withValidation hoc if changed 1`] = `
<Validator
  info="Required input"
>
  <TextField
    info="Required input"
    onChange={[Function]}
  >
    <TextFieldInt
      info="Required input"
      onChange={[Function]}
    >
      <styled.div>
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-kgoBCf",
                "isStatic": true,
                "lastClassName": "eXDsoh",
                "rules": Array [
                  "
  position: relative;
",
                ],
              },
              "displayName": "styled.div",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-kgoBCf",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="sc-kgoBCf eXDsoh"
          >
            <Styled(StackPanel)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kGXeez",
                      "isStatic": true,
                      "lastClassName": "kYntIi",
                      "rules": Array [
                        "
  display: flex;
",
                      ],
                    },
                    "displayName": "Styled(StackPanel)",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kGXeez",
                    "target": [Function],
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <StackPanel
                  className="sc-kGXeez kYntIi"
                >
                  <styled.div
                    className="sc-kGXeez kYntIi"
                    dir="row"
                    wrapping="nowrap"
                  >
                    <StyledComponent
                      className="sc-kGXeez kYntIi"
                      dir="row"
                      forwardedComponent={
                        Object {
                          "$$typeof": Symbol(react.forward_ref),
                          "attrs": Array [],
                          "componentStyle": ComponentStyle {
                            "componentId": "sc-bwzfXH",
                            "isStatic": false,
                            "lastClassName": "fyOvof",
                            "rules": Array [
                              "
  display: flex;
  flex-direction: ",
                              [Function],
                              ";
  flex-wrap: ",
                              [Function],
                              ";
  justify-content: flex-start;
",
                            ],
                          },
                          "displayName": "styled.div",
                          "foldedComponentIds": Array [],
                          "render": [Function],
                          "styledComponentId": "sc-bwzfXH",
                          "target": "div",
                          "toString": [Function],
                          "warnTooManyClasses": [Function],
                          "withComponent": [Function],
                        }
                      }
                      forwardedRef={null}
                      wrapping="nowrap"
                    >
                      <div
                        className="sc-kGXeez kYntIi sc-bwzfXH fyOvof"
                        dir="row"
                      >
                        <styled.div
                          border={1}
                          focused={false}
                          hasValue={false}
                        >
                          <StyledComponent
                            border={1}
                            focused={false}
                            forwardedComponent={
                              Object {
                                "$$typeof": Symbol(react.forward_ref),
                                "attrs": Array [],
                                "componentStyle": ComponentStyle {
                                  "componentId": "sc-jzJRlG",
                                  "isStatic": false,
                                  "lastClassName": "bSfnqi",
                                  "rules": Array [
                                    [Function],
                                  ],
                                },
                                "displayName": "styled.div",
                                "foldedComponentIds": Array [],
                                "render": [Function],
                                "styledComponentId": "sc-jzJRlG",
                                "target": "div",
                                "toString": [Function],
                                "warnTooManyClasses": [Function],
                                "withComponent": [Function],
                              }
                            }
                            forwardedRef={null}
                            hasValue={false}
                          >
                            <div
                              className="sc-jzJRlG gHloTz"
                            >
                              <Component
                                error={false}
                                focused={false}
                                hasValue={false}
                                multiline={false}
                              >
                                <styled.div>
                                  <StyledComponent
                                    forwardedComponent={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "attrs": Array [],
                                        "componentStyle": ComponentStyle {
                                          "componentId": "sc-gqjmRU",
                                          "isStatic": true,
                                          "lastClassName": "lohXgE",
                                          "rules": Array [
                                            "
  flex-grow: 1;
  display: flex;
  flex-flow: column-reverse;
  height: 100%;
  position: relative;
  min-width: 0;
  margin: auto;
",
                                          ],
                                        },
                                        "displayName": "styled.div",
                                        "foldedComponentIds": Array [],
                                        "render": [Function],
                                        "styledComponentId": "sc-gqjmRU",
                                        "target": "div",
                                        "toString": [Function],
                                        "warnTooManyClasses": [Function],
                                        "withComponent": [Function],
                                      }
                                    }
                                    forwardedRef={null}
                                  >
                                    <div
                                      className="sc-gqjmRU lohXgE"
                                    >
                                      <styled.input
                                        labelShown={false}
                                        onBlur={[Function]}
                                        onChange={[Function]}
                                        onFocus={[Function]}
                                        value=""
                                      >
                                        <StyledComponent
                                          forwardedComponent={
                                            Object {
                                              "$$typeof": Symbol(react.forward_ref),
                                              "attrs": Array [],
                                              "componentStyle": ComponentStyle {
                                                "componentId": "sc-fjdhpX",
                                                "isStatic": false,
                                                "lastClassName": "ghzElm",
                                                "rules": Array [
                                                  "
  color: ",
                                                  [Function],
                                                  ";
  background: none;
  border: none;
  border-radius: 0;
  font-size: ",
                                                  "1rem",
                                                  ";
  font-family: inherit;
  padding: ",
                                                  [Function],
                                                  ";
  box-sizing: border-box;
  box-shadow: none;
  margin: 0;
  width: 100%;
  height: 100%;
  cursor: ",
                                                  [Function],
                                                  ";
  -webkit-appearance: none;
  transition: all 0.2s;

  &::placeholder {
    color: ",
                                                  [Function],
                                                  ";
    opacity: ",
                                                  [Function],
                                                  ";
    transition: inherit;
  }

  &:focus {
    outline: none;

    &::placeholder {
      opacity: 1;
    }
  }
",
                                                ],
                                              },
                                              "displayName": "styled.input",
                                              "foldedComponentIds": Array [],
                                              "render": [Function],
                                              "styledComponentId": "sc-fjdhpX",
                                              "target": "input",
                                              "toString": [Function],
                                              "warnTooManyClasses": [Function],
                                              "withComponent": [Function],
                                            }
                                          }
                                          forwardedRef={[Function]}
                                          labelShown={false}
                                          onBlur={[Function]}
                                          onChange={[Function]}
                                          onFocus={[Function]}
                                          value=""
                                        >
                                          <input
                                            className="sc-fjdhpX ghzElm"
                                            onBlur={[Function]}
                                            onChange={[Function]}
                                            onFocus={[Function]}
                                            value=""
                                          />
                                        </StyledComponent>
                                      </styled.input>
                                    </div>
                                  </StyledComponent>
                                </styled.div>
                              </Component>
                              <Component
                                hasValue={false}
                                onClear={[Function]}
                              />
                            </div>
                          </StyledComponent>
                        </styled.div>
                      </div>
                    </StyledComponent>
                  </styled.div>
                </StackPanel>
              </StyledComponent>
            </Styled(StackPanel)>
            <InputInfo>
              <styled.div>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "sc-bdVaJa",
                        "isStatic": false,
                        "lastClassName": "dvVoLK",
                        "rules": Array [
                          "
  ",
                          "
    ",
                          "font-size: 0.75rem;
  ",
                          "
    ",
                          "line-height: 0.875rem;
  ",
                          "
    ",
                          "
  ",
                          "
  color: ",
                          [Function],
                          ";
  padding: ",
                          "0.25rem",
                          " 0;
",
                        ],
                      },
                      "displayName": "styled.div",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "sc-bdVaJa",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="sc-bdVaJa dvVoLK"
                  >
                    Required input
                  </div>
                </StyledComponent>
              </styled.div>
            </InputInfo>
          </div>
        </StyledComponent>
      </styled.div>
    </TextFieldInt>
  </TextField>
</Validator>
`;

exports[`<InputInfo /> should not render an <InputInfo> from direct API without any children 1`] = `""`;

exports[`<InputInfo /> should not render an <InputInfo> from jsx 1`] = `""`;

exports[`<InputInfo /> should render <InputInfo> that has an error message 1`] = `
<styled.div>
  I am wrong
</styled.div>
`;
